functionality is coming together, commented groups.html to show bugs I still need to fix. if amount of participants in a group is larger than 6 it is breaking.

--- a/groups.html
+++ b/groups.html
@@ -101,7 +101,7 @@
         let htmlString = '';
         let liString = '';
 
-        for (let i = 1; i < len; i++) {
+         for (let i = 1; i < len; i++) {
           if (i % 6 === 0) {
             liString +=
             `
@@ -121,6 +121,9 @@
             selector.insertAdjacentHTML('beforeend', htmlString);
             htmlString = '';
             liString = '';
+          // isn't working quite right yet on exactly 6 items makes another group
+          // if len > 6 then it doesn't do the open thing
+          // need another variable
           }else if (i === len - 1 && (len - 1) % 6 !== 0) {
             liString +=
             `
@@ -128,7 +131,7 @@
               ${arr[i]}
             </li>
             `;
-            for (let j = 0; j < 6 - len; j++) {
+            for (let j = 0; j < 7 - len; j++) {
               liString += 
               `<li>
                 open
